# PerformanceBot

./: .gitignore  README.md  package-lock.json  requirements.txt  setup.sh
.github/workflows/: docker-image.yml  mdbook.yml  notify-me.yml  test_and_build.yml  testing-flask.yml
backend/: main.py  requirements.txt  run_backend.sh  test.html  websocket.sh
book/: book.toml
book/src/: SUMMARY.md  bot.md  bot_create.md  bot_imports.md  chapter_1.md  docs.md  intro.md  websocket.md  websocket_create.md  websocket_imports.md
bot/: Dockerfile  __main__.py  bot.py  logger.py  main.py  pyproject.toml  requirements.txt  run_bot.sh  test_bot.py
bot/backend_socket/: socket_con.py
bot/config/: __init__.py
bot/handlers/: __init__.py  all_info.py  base_info.py  capture.py  cpu_info.py  disk_info.py  docker_info.py  help.py  memory_info.py  network_info.py  sensors_info.py  start.py  system_info.py
bot/info_handlers/: capture_info.py  cpu_info.py  disk_info.py  docker_info.py  info_base.py  memory_info.py  network_info.py  sensors_info.py  system_info.py
bot/socket/: socket_con.py
frontend/: package-lock.json  package.json
frontend/files/: system-data.json
frontend/src/: index.tsx
frontend/src/components/: App.tsx  Button.tsx  Pie.tsx  TopBar.tsx
frontend/src/components/cards/: CpuInfoCard.tsx  MemoryInfoCard.tsx  Metric.tsx  SystemInfoCard.tsx
frontend/src/css/: CpuInfoCard.css  SystemInfoCard.css  TopBar.css  index.css
jsons/: TEST.json
